--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Pickalgo"
 meta_title: "Devenez testeur de promos !"
-meta_description: "Avec Pickalgo, décidez vous-même du prix des promos... et bénficiez-en avant tout le monde ! Grâce à vous nous définissons le meilleur prix pour que la promo soit bénéfique aux clients et au vendeur."
+meta_description: "Parce qu'il est difficile pour un vendeur de trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde."
 meta_image: "tags.jpg"                           # Une image dans votre dossier app/assets/images/
