change prop value for customers and business, change main metas

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Pickalgo"
-meta_title: "Devenez testeur de promos !"
-meta_description: "Parce qu'il est difficile pour un vendeur de trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde."
+meta_title: "La meilleure promo possible !"
+meta_description: "Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo dont il est possible de vous faire bénéficier."
 meta_image: "tags.jpg"                           # Une image dans votre dossier app/assets/images/
