change way it works

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Pickalgo"
-meta_title: "La meilleure promo possible !"
-meta_description: "Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo dont il est possible de vous faire bénéficier."
+meta_title: "Devenez testeur de promo !"
+meta_description: "Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo négociée pour vous."
 meta_image: "tags.jpg"                           # Une image dans votre dossier app/assets/images/
